--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,18 @@
 <div class="main" *ngIf="{ 
   config: config$ | async,
-  karaokeUrl: karaokeUrl$ | async
+  karaokeUrl: karaokeUrl$ | async,
+  karaokeUser: karaokeUser$ | async
 } as obs$">
   <div class="rt-viewer" >
     <ng-container *ngIf="admin || !admin && obs$.config?.showOpen; else landingPageTemplate">
-      <div class="stream-btns">
-        <ng-container *ngIf="!admin">
-          <button [class.active]="stream === 'dolby'" (click)="setStream('dolby')">Main</button>
-          <button [class.active]="stream === 'meshcast'" (click)="setStream('meshcast')">Backstage</button>
-          <!-- <button @click="mode = getMode()">Mode = {{mode}}</button> -->
-        </ng-container>
-      </div>
       <div class="stream-wrapper" [class.duo]="admin">
         <!-- <div class="stream">
           <iframe src="https://viewer.millicast.com?streamId=BNfr94/BQFKN" allowfullscreen></iframe>
         </div> -->
         <div class="stream">
-          <ng-container *ngIf="obs$.karaokeUrl; else dolbyStreamTemplate">
+          <ng-container *ngIf="obs$?.karaokeUser?.vmixEmbed; else dolbyStreamTemplate">
             <div class="vmix">
-              <iframe allow="camera *; microphone *" [attr.src]="obs$.karaokeUrl" allowfullscreen></iframe>
+              <iframe allow="camera *; microphone *" [attr.src]="obs$?.karaokeUser?.url" allowfullscreen></iframe>
             </div>
           </ng-container>
           <ng-template #dolbyStreamTemplate>
@@ -36,12 +30,23 @@
       </div>
       <div *ngIf="admin" class="admin-panel">
         <ng-container>
-          <button (click)="toggleShowOpen(obs$?.config?.showOpen)">
-            {{ obs$?.config?.showOpen ? 'Close Show' : 'Open Show'}}
-          </button>
+
+          <div class="show-status" [class.open]="obs$?.config?.showOpen" [class.closed]="!obs$?.config?.showOpen">
+            <button (click)="toggleShowOpen(obs$?.config?.showOpen)">
+              {{ obs$?.config?.showOpen ? 'Close Show' : 'Open Show'}}
+            </button>
+            <em>{{ obs$?.config?.showOpen ? 'Show is Open!' : 'Show is Closed'}}</em>
+          </div>
           <div class="admin-form">
             <div class="karaoke-user" *ngFor="let ku of karaokeUsers; let i = index">
-              <h3>{{ku?.name}}</h3>
+              <div class="header-switch">
+                <h3>{{ku?.name}}</h3>          
+                <ui-switch 
+                  class="flex-row" 
+                  (valueChange)="onChangeKaraokeSwitch($event, i)"
+                  [(ngModel)]="karaokeUsers[i].vmixEmbed">
+                </ui-switch>
+              </div>
               <app-inline-edit
                 type="input"
                 theme="dark"
@@ -57,10 +62,19 @@
   
         </ng-container>
       </div>
+      <div class="stream-btns" *ngIf="!admin">
+        <h2>Camera</h2>
+        <button class="push--flat" [class.active]="stream === 'dolby'" (click)="setStream('dolby')">1</button>
+        <button class="push--flat" [class.active]="stream === 'meshcast'" (click)="setStream('meshcast')">2</button>
+      </div>
     </ng-container>
     <ng-template #landingPageTemplate>
-      Landing Page!
+      <div class="landing-logo">
+        <img loop="infinite"  src="../assets/spin_text.gif">
+      </div>
     </ng-template>
+
+    <!-- <img *ngIf="tvOverlay" src="../assets/tv_vintage.png" class="tv-overlay"/> -->
   </div>
   <div class="rt-chat" *ngIf="chatUrl">
     <iframe [attr.src]="chatUrl"></iframe>
