--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,12 +10,54 @@ body {
   font-family: sans-serif;
 }
 
+.cam-btns {
+  display: flex;
+  align-items: center;
+  font-family: 'Arcade Interlaced';
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-shadow: 4px 4px #290d01;
+}
+
+.speaker-tex {
+  width: 100%;
+  height: 100%;
+  margin: 20px 0;
+  background-size: contain;
+  border: solid 1px;
+  box-sizing: border-box;
+  filter: brightness(0.5);
+  background-size: 50%;
+  background-image: url('../assets/speaker-tex.jpg');
+
+  &.left {
+    border-radius: 0 10px 10px 0;
+  }
+
+  &.right {
+    border-radius: 10px 0 0 10px;
+  }
+}
+
 .landing-logo {
   width: 100%; 
   height: 100%; 
   display: flex; 
   justify-content: center;
   align-items: center;
+  background: black;
+  flex-direction: column;
+  color: #1cd2ff;
+  text-align: center;
+  font-size: 20px;
+  padding: 40px;
+  box-sizing: border-box;
+  font-family: 'Arcade Interlaced', sans-serif;
+
+  img {
+    width: 100%;
+  }
 }
 
 .show-status {
@@ -73,7 +115,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background: #2d3343;
+  background: #161922;
   position: relative;
 
   .tv-overlay {
@@ -96,8 +138,10 @@ body {
   height: 100%; 
   width: 350px;
   flex-shrink: 0;
+  border-left: solid 4px;
 }
 .admin-panel {
+  background: #3a4764;
   padding: 20px;
   height: 100%;
   display: flex;
@@ -115,23 +159,126 @@ body {
   width: 100%; 
   height: 100%; 
 }
+
 .stream-btns {
   display: flex;
+  min-width: 600px;
   justify-content: center;
   align-items: center;
-  font-family: sans-serif;
+  color: white;
   font-weight: 200;
-  background: #2890ff;
-  border: 15px solid;
+  border-width: 5px;
+  border-color: rgba(0,0,0,0.3);
   border-style: outset;
-  border-color: #0e82fc;
+  background-image: url('../assets/flowers.jpg');
+  background-repeat: repeat;
+  background-size: cover;
+  filter: saturate(0.6);
+  padding: 10px;
+
+
+  .coin-slot {
+    height: 100px;
+    margin-left: auto;
+    margin-right: 20px;
+    position: relative;
+
+    &::before {
+      content: '';
+      height: 100px;
+      width: 100px;
+      background: rgba(0,0,0, 0.5);
+      filter: blur(0.3);
+      position: absolute;
+      top: 10px;
+      left: 0;
+    }
+  }
+
+  .group {
+    &.right {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  .speaker {
+    height: 150px;
+    transform: rotate(270deg);
+
+    &.left {
+      margin-left: 20px;
+      margin-right: auto;
+    }
+
+    &.right {
+      margin-left: auto;
+      margin-right: 20px;
+    }
+  }
 }
 
-.stream-wrapper {
+.tv-monitor-outer {
+  width: 100%;
+  height: 100%;
+  border: solid 20px #51545e;
+  border-radius: 40px;
+  box-sizing: border-box;
+  max-width: 1000px;
+  min-width: 70%;
+  margin: 20px;
+}
+
+.tv-monitor-inner {
+  width: 100%;
+  height: 100%;
+  border: 10px black solid;
+  border-radius: 20px;
+  box-sizing: border-box;
   position: relative;
-  width: 100%; 
+x
+  &.backstage {
+    border: solid 10px #141926;
+  }
+}
+
+.admin-wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  .streams {
+    margin-bottom: 20px;
+  
+    > *:first-child {
+      margin-right: 4px;
+    }
+  }
+}
+
+.streams {
+  display: flex;
+  width: 100%;
   height: 100%;
 }
+
+.tv-wrapper {
+  display: flex;
+  width: 100%; 
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 50px 0;
+  background: #60646f;
+  box-sizing: border-box;
+  border: solid 4px #00000026;
+  border-width: 6px 0;
+}
+
 .stream {
   width: 100%;
   height: 100%;
@@ -157,4 +304,5 @@ iframe {
   border-style: none;
   width: 100%; 
   height: 100%;
+  border-radius: 10px;
 }
