--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,10 +31,12 @@
     <div class="stream-btns" *ngIf="!admin && !obs$.karaokeUser?.vmixEmbed">
       <img class="speaker left" src="../assets/speaker.png"/>
 
-      <div class="cam-btns" *ngIf="obs$.config?.showOpen">
+      <div class="cam-btns-wrapper" *ngIf="obs$.config?.showOpen">
+        <div class="cam-btns">
+          <button class="push--flat" [class.active]="stream === 'dolby'" (click)="setStream('dolby')">1</button>
+          <button class="push--flat" [class.active]="stream === 'meshcast'" (click)="setStream('meshcast')">2</button> 
+        </div> 
         <h1>CAMERA</h1>
-        <button class="push--flat" [class.active]="stream === 'dolby'" (click)="setStream('dolby')">1</button>
-        <button class="push--flat" [class.active]="stream === 'meshcast'" (click)="setStream('meshcast')">2</button>  
       </div>
 
       <div class="group right">
