--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,12 +10,19 @@ body {
   font-family: sans-serif;
 }
 
-.cam-btns {
+.cam-btns-wrapper {
+  h1 {
+    font-size: 20px;
+    background: black;
+    padding: 4px 8px;
+    margin: 0;
+    margin-top: 4px;
+  }
   display: flex;
+  flex-direction: column;
   align-items: center;
   font-family: 'Arcade Interlaced';
   color: white;
-  padding: 10px 20px;
   border-radius: 10px;
   text-shadow: 4px 4px #290d01;
 }
@@ -51,7 +58,6 @@ body {
   color: #1cd2ff;
   text-align: center;
   font-size: 20px;
-  padding: 40px;
   box-sizing: border-box;
   font-family: 'Arcade Interlaced', sans-serif;
 
@@ -283,6 +289,10 @@ x
 .stream {
   width: 100%;
   height: 100%;
+
+  iframe {
+    border-radius: 10px;
+  }
 }
 .overlay {
   position: absolute;
@@ -305,5 +315,4 @@ iframe {
   border-style: none;
   width: 100%; 
   height: 100%;
-  border-radius: 10px;
 }
