--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,22 +48,26 @@ body {
 }
 
 .landing-logo {
-  width: 100%; 
-  height: 100%; 
-  display: flex; 
+  background-image: url('../assets/new_logo.gif');
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
-  background: black;
   flex-direction: column;
   color: #1cd2ff;
   text-align: center;
   font-size: 20px;
   box-sizing: border-box;
-  font-family: 'Arcade Interlaced', sans-serif;
+  border-radius: 10px;
+  font-family: "Arcade Interlaced", sans-serif;
 
   img {
     width: 100%;
-    max-height: 400px;
   }
 }
 
@@ -146,7 +150,11 @@ body {
   width: 350px;
   flex-shrink: 0;
   border-left: solid 4px;
+  @media only screen and (max-width: 1000px) {
+    display: none;
+  }
 }
+
 .admin-panel {
   background: #3a4764;
   padding: 20px;
@@ -183,7 +191,6 @@ body {
   filter: saturate(0.6);
   padding: 10px;
 
-
   .coin-slot {
     height: 100px;
     margin-left: auto;
@@ -213,6 +220,11 @@ body {
   .speaker {
     height: 150px;
     transform: rotate(270deg);
+
+
+  @media only screen and (max-height: 600px) {
+    height: 100px;
+  }
 
     &.left {
       margin-left: 20px;
@@ -284,11 +296,16 @@ x
   box-sizing: border-box;
   border: solid 4px #00000026;
   border-width: 6px 0;
+  @media only screen and (max-height: 600px) {
+    padding: 0;
+  }
 }
 
 .stream {
   width: 100%;
   height: 100%;
+  background: #1f00ff;
+  border-radius: 10px;
 
   iframe {
     border-radius: 10px;
