--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -96,7 +96,7 @@ body {
   }
 
   &.open {
-    background: rgb(0, 186, 0);
+    background: rgb(100 189 99);
   }
   &.closed {
     background: tomato;
