screen size updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
                   </div>
                   <div class="bottom-text" >
                     <div>The  show  will</div>
-                    <div>be  begin  shortly!</div>
+                    <div>begin  shortly!</div>
                   </div>
                 </div>
               </ng-template>
