--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -100,6 +100,12 @@ body {
   &.closed {
     background: tomato;
   }
+  &.hidden {
+    background: black;
+  }
+  &.visible {
+    background: rgb(100 189 99);
+  }
 }
 
 .karaoke-user {
@@ -131,9 +137,9 @@ body {
   display: flex; 
   height: 100vh;
   padding: 0;
-  background:whitesmoke;
   overflow:hidden;
 }
+
 .rt-viewer {
   display: flex;
   flex-direction: column;
